sample-app/mesh/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-auth-header
  namespace: default
spec:
  workloadSelector:
    labels:
      app: portfolio
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 80
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.wasm
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  vm_id: add_auth_header
                  runtime: envoy.wasm.runtime.v8
                  code:
                    remote:
                      http_uri:
                        uri: "oci://pheely/add_auth_header:0.1"
                      # Optional: specifying sha256 checksum will let istio agent verify the checksum of downloaded artifacts.
                      # It is **highly** recommended to provide the checksum, since missing checksum will cause the Wasm module to be downloaded repeatedly.
                      # To compute the sha256 checksum of a Wasm module, download the module and run `sha256sum` command with it.
                      sha256: "78722c32d58ee9955acc5a70274c8a0f16b8c09eb857628f99303fa4381708d2"
                # The configuration for the Wasm extension itself
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {}
    # The second patch adds the cluster that is referenced by the lua code
    # cds match is omitted as a new cluster is being added
    - applyTo: CLUSTER
      match:
        context: SIDECAR_OUTBOUND
      patch:
        operation: ADD
        value: # cluster specification
          name: jwtissuer
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          connect_timeout: 0.5s
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: jwtissuer
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      protocol: TCP
                      address: jwtissuer
                      port_value: 8080
